force-app/main/default/objects/Competitor__c/fields/Competitor_in__c.field-meta.xml
<CustomField>
    <fullName>Competitor_in__c</fullName>
    <description>Created this field to identify competitors in US and/or Canada</description>
    <label>Competitor in</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US Only</fullName>
            </value>
            <value>
                <fullName>Canada Only</fullName>
            </value>
            <value>
                <fullName>US and Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>