force-app/main/default/objects/Competitor__c/fields/Facility_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Facility_Supplies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facility Supplies</label>
    <type>Checkbox</type>
</CustomField>