force-app/main/default/objects/Competitor__c/fields/Graphics__c.field-meta.xml
<CustomField>
    <fullName>Graphics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Graphics</label>
    <type>Checkbox</type>
</CustomField>