force-app/main/default/objects/Competitor__c/fields/Packaging__c.field-meta.xml
<CustomField>
    <fullName>Packaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Packaging</label>
    <type>Checkbox</type>
</CustomField>