force-app/main/default/objects/Competitor__c/fields/Paper__c.field-meta.xml
<CustomField>
    <fullName>Paper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paper</label>
    <type>Checkbox</type>
</CustomField>