force-app/main/default/objects/Competitor__c/fields/Wide_Format__c.field-meta.xml
<CustomField>
    <fullName>Wide_Format__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wide Format</label>
    <type>Checkbox</type>
</CustomField>