force-app/main/default/objects/Competitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Facility_Supplies__c</columns>
    <columns>Packaging__c</columns>
    <columns>Paper__c</columns>
    <columns>Graphics__c</columns>
    <columns>Wide_Format__c</columns>
    <columns>Competitor_in__c</columns>
    <columns>Inactive_Competitor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>