force-app/main/default/objects/Competitor__c/listViews/Paper.listView-meta.xml
<ListView>
    <fullName>Paper</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Facility_Supplies__c</columns>
    <columns>Packaging__c</columns>
    <columns>Paper__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Paper__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Paper</label>
</ListView>